overflow-x fix

--- a/client/src/static/index.css
+++ b/client/src/static/index.css
@@ -200,7 +200,7 @@ header button {
 #footer {
     overflow: hidden;
     color: white;
-    width: inherit;
+    width: 98.5%;
     display: block;
     margin: 0px;
     padding: 10px;
